--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "npm start",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm start"
+
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
